<resources>
    <string name="app_name" translatable="false">FreeMarketsApp</string>
    <string name="app_name_min" translatable="false">freemarketsapp</string>
    <string name="auth" translatable="false">by CoDevSolution</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">FreeMarketsApp</string>
    <string name="nav_header_subtitle" translatable="false">freemarketsapp@codevsolution.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Name</string>
    <string name="direccion">Adress</string>
    <string name="telefono">Phone</string>
    <string name="email">email</string>
    <string name="contacto">Contact</string>
    <string name="guardar">Save</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="tipocliente">Client Type</string>
    <string name="cliente">Client</string>
    <string name="borrar">Delete</string>
    <string name="nuevoproyecto">New Project</string>
    <string name="estado">state</string>
    <string name="descripcion_tipo_cliente">Descryption</string>
    <string name="proyecto">Project</string>
    <string name="fecha_entrada">Input date</string>
    <string name="fecha_acordada">Accord date</string>
    <string name="sinfecha">Date no stablished</string>
    <string name="fecha_calculada">Calculated date</string>
    <string name="fecha_final">Final date</string>
    <string name="importe_calculado">Calculated price</string>
    <string name="nuevocliente">New client</string>
    <string name="sinprecio">No price</string>
    <string name="importe_final">Final price</string>
    <string name="partidas_proyecto">Project task</string>
    <string name="gastos_proyecto">Gasto project</string>
    <string name="total_partidas">Total Jobs</string>
    <string name="total_gastos">Total gasto</string>
    <string name="sinpartidas">No tasks</string>
    <string name="singastos">No gastos</string>
    <string name="tiempo">time</string>
    <string name="cantidad">units</string>
    <string name="completada">% completa</string>
    <string name="horas">hours</string>
    <string name="unidades">un.</string>
    <string name="partidasproyecto">Partidas Proyecto</string>
    <string name="nuevapartida">Nueva Partida del Proyecto</string>
    <string name="volver">Volver</string>
    <string name="nuevoprospecto">Nuevo Prospecto</string>
    <string name="prospecto">Prospecto</string>
    <string name="clientes">clientes</string>
    <string name="prospectos">prospectos</string>
    <string name="presupuesto">presupuesto</string>
    <string name="presupuestos">presupuestos</string>
    <string name="proyectos">proyectos</string>
    <string name="cobros">cobros</string>
    <string name="historico">historico</string>
    <string name="partida">partida</string>
    <string name="gasto">gasto</string>
    <string name="habitual">Habitual</string>
    <string name="nuevo">Nuevo</string>
    <string name="ocasional">Ocasional</string>
    <string name="gastos">gastos</string>
    <string name="partidas">partidas</string>
    <string name="nuevo_presupuesto">Nuevo presupuesto</string>
    <string name="presupuesto_pendiente_entrega">Presupuesto pendiente entrega</string>
    <string name="presupuesto_en_espera_aceptar">Presupuesto en espera aceptar</string>
    <string name="presupuesto_aceptado_pendiente_ejecucion">Presupuesto aceptado pendiente ejecucion</string>
    <string name="proyecto_en_ejecucion">Proyecto en ejecucion</string>
    <string name="proyecto_pendiente_entrega">Proyecto pendiente entrega</string>
    <string name="proyecto_entregado_pendiente_cobro">Proyecto entregado pendiente cobro</string>
    <string name="proyecto_cobrado">Proyecto cobrado</string>
    <string name="nuevo_presupuesto_est">Nuevo presupuesto</string>
    <string name="presupuesto_pendiente_entrega_est">Presupuesto pendiente entrega</string>
    <string name="presupuesto_en_espera_aceptar_est">Presupuesto en espera aceptar</string>
    <string name="presupuesto_aceptado_pendiente_ejecucion_est">Presupuesto aceptado pendiente ejecucion</string>
    <string name="proyecto_en_ejecucion_est">Proyecto en ejecucion</string>
    <string name="proyecto_pendiente_entrega_est">Proyecto pendiente entrega</string>
    <string name="proyecto_entregado_pendiente_cobro_est">Proyecto entregado pendiente cobro</string>
    <string name="proyecto_cobrado_est">Proyecto cobrado</string>
    <string name="nuevo_proyecto">Nuevo proyecto</string>
    <string name="principal">Principal</string>
    <string name="presupuesto_no_aceptado_est">Presupuesto no aceptado</string>
    <string name="presupuesto_no_aceptado">Presupuesto_no_aceptado</string>
    <string name="agendaTarea">Agenda</string>
    <string name="porcentaje">%</string>
    <string name="producto">Producto</string>
    <string name="importe">Importe</string>
    <string name="tarea_personalizada">Tarea personalizada</string>
    <string name="producto_personalizado">Producto personalizado</string>
    <string name="perfiles">perfiles</string>
    <string name="guardar_nueva_tarea">Guardar como nueva tarea</string>
    <string name="guardar_nuevo_producto">Guardar nuevo producto</string>
    <string name="tareas">Tareas</string>
    <string name="presupuestos_pendientes">Presup sin entregar</string>
    <string name="tareas_pendientes">Tareas pendientes</string>
    <string name="presupuestos_en_espera">Presupuesto en espera</string>
    <string name="pendiente_cobro">Presupuesto Pendiente cobro</string>
    <string name="fecha_entrega_presup">Fecha entrega presupuesto</string>
    <string name="eventos">Eventos</string>
    <string name="fecha_evento">Fecha vencimiento evento</string>
    <string name="completa">Completa</string>
    <string name="editar_evento">Editar evento</string>
    <string name="hora_evento">Hora vencimiento</string>
    <string name="aviso">Avisar antes</string>
    <string name="dias">Dias</string>
    <string name="minutos">Minutos</string>
    <string name="beneficio">Beneficio %</string>
    <string name="total">Total</string>
    <string name="gasto_proyecto">Gasto proyecto:</string>
    <string name="gasto_presupuesto">Gasto Presupuesto:</string>
    <string name="partida_proyecto">Partida proyecto</string>
    <string name="partida_presupuesto">Partida presupuesto</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="repetir_evento">Repetir cada:</string>
    <string name="anios">Años</string>
    <string name="meses">Meses</string>
    <string name="duracion">Duracion:</string>
    <string name="fecha_ini_evento">Fecha inicio evento</string>
    <string name="fecha_fin_evento">Fecha final evento</string>
    <string name="hora_ini_evento">Hora inicio evento</string>
    <string name="hora_fin_evento">Hora final evento</string>
    <string name="fecha_inicio">Fecha inicio</string>
    <string name="fecha_fin">Fecha fin</string>
    <string name="hora_inicio">Hora inicio</string>
    <string name="hora_fin">Hora fin</string>
    <string name="cliente_relacionado">Cliente relacionado</string>
    <string name="proyecto_relacionado">Proyecto relacionado</string>
    <string name="lugar_cita">Lugar cita</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="modificar_repeticiones">Modificar repeticiones</string>
    <string name="relacionar_proyecto">Relacionar un presupuesto o proyecto</string>
    <string name="relacionar_cliente">Relacionar un cliente o prospecto</string>
    <string name="convertir">Convertir en</string>
    <string name="proximos_eventos">Proximos eventos</string>
    <string name="evento_relacionado">Crear evento relacionado</string>
    <string name="fecha_acordada_trabajo">Fecha acordada</string>
    <string name="establecer_fecha_entrega_presup">Establecer fecha entrega Presup.</string>
    <string name="seleccione_cliente">Seleccione el cliente</string>
    <string name="seleccione_proyecto">Seleccione proyecto relacionado</string>
    <string name="tipo_evento">Tipo evento</string>
    <string name="imagen_producto_proveedor">Imagen producto proveedor</string>
    <string name="precio_proveedor">Precio proveedor</string>
    <string name="descripcion_proveedor">Descripcion producto proveedor</string>
    <string name="nombre_producto_proveedor">Nombre producto proveedor</string>
    <string name="referencia_proveedor">Referencia proveedor</string>
    <string name="nuevo_producto_proveedor">Nuevo producto proveedor</string>
    <string name="nuevo_producto">Nuevo producto</string>
    <string name="descripcion">Descripcion</string>
    <string name="descuento_proveedor">Descuento proveedor</string>
    <string name="asignar_cliente">Asigne un cliente</string>
    <string name="tipo_detpartida">Tipo detalle Partida</string>
    <string name="horas_disponibles">Horas disponibles</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="domingo">Domingo</string>
    <string name="vacaciones">Vacaciones</string>
    <string name="dias_vacaciones">Dias de vaciones al año</string>
    <string name="abr_lunes">LUN</string>
    <string name="abr_martes">MAR</string>
    <string name="abr_miercoles">MIE</string>
    <string name="abr_jueves">JUE</string>
    <string name="abr_viernes">VIE</string>
    <string name="abr_sabado">SAB</string>
    <string name="abr_domingo">DOM</string>
    <string name="hacer_perfil_activo">Hacer perfil activo</string>
    <string name="fecha_compra">Fecha compra</string>
    <string name="amortizacion">amortizacion</string>
    <string name="sueldo">Sueldo anual</string>
    <string name="usar_prioridad_clientes">Usar la prioridad de clientes</string>
    <string name="dias_pasados_agenda">Ver dias pasados en agenda</string>
    <string name="dias_futuros_agenda">Ver dias futuros en agenda</string>
    <string name="partida_base">Partida base</string>
    <string name="nueva_partida">Nueva partida</string>
    <string name="action_help">Help</string>
    <string name="action_info">Info</string>
    <string name="genera_pdf">Genera PDF</string>
    <string name="ver_pdf">PDF</string>
    <string name="asunto">Asunto</string>
    <string name="texto_mensaje">Texto mensaje</string>
    <string name="compartir_presup">Compartir</string>
    <string name="activo">ACTIVO</string>
    <string name="enviar_pdf">Enviar por emailf</string>
    <string name="compartir_pdf">Compartir pdf</string>
    <string name="clonarpartida">Buscar partida a clonar</string>
    <string name="buscar_cliente">Buscar cliente</string>
    <string name="nuevo_cliente">Nuevo Cliente</string>
    <string name="nuevo_prospecto">Nuevo Prospecto</string>
    <string name="nuevo_evento">Nuevo Evento</string>
    <string name="nuevo_gasto">Nuevo Gasto</string>
    <string name="nueva_partida_proy">Nueva Partida</string>
    <string name="nuevo_perfil">Nuevo Perfil</string>
    <string name="nueva_amortizacion">Nueva Amortización</string>
    <string name="web">Web</string>
    <string name="palabras_clave">Palabras clave</string>
    <string name="mensual">Mensual</string>
    <string name="trimestral">Trimestral</string>
    <string name="semestral">Semestral</string>
    <string name="anual">Anual</string>
    <string name="importe_perido">Importe periodo</string>
    <string name="num_prod_sus">Numero de productos (min. 50)</string>
    <string name="crear_suscripcion">Crear suscripcion</string>
</resources>