<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.FragmentCRUDPerfil">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etnomudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:hint="@string/nombre"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvpactivocudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/activo"
                    android:textColor="@color/colorAccent"
                    android:gravity="right"
                    android:textSize="18sp"/>

            </LinearLayout>



            <EditText
                android:id="@+id/etdescudperfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:hint="@string/descripcion_tipo_cliente" />

            <TextView
                android:id="@+id/lhorasudperfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/horas_disponibles" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/llunesudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.05"
                    android:gravity="center"
                    android:text="@string/abr_lunes" />

                <TextView
                    android:id="@+id/lmartesudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.05"
                    android:gravity="center"
                    android:text="@string/abr_martes" />

                <TextView
                    android:id="@+id/lmiercolesudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/abr_miercoles" />

                <TextView
                    android:id="@+id/ljuevesudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/abr_jueves" />

                <TextView
                    android:id="@+id/lviernesudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/abr_viernes" />

                <TextView
                    android:id="@+id/lsabadoudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/abr_sabado" />

                <TextView
                    android:id="@+id/ldomingoudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/abr_domingo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ethlunesudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.05"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/lunes"
                    android:inputType="numberDecimal"
                    android:text="0" />

                <EditText
                    android:id="@+id/ethmartesudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.05"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/martes"
                    android:inputType="numberDecimal"
                    android:text="0" />

                <EditText
                    android:id="@+id/ethmiercolesudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/miercoles"
                    android:inputType="numberDecimal"
                    android:text="0" />

                <EditText
                    android:id="@+id/ethjuevesudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/jueves"
                    android:inputType="numberDecimal"
                    android:text="0" />

                <EditText
                    android:id="@+id/ethviernesudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/viernes"
                    android:inputType="numberDecimal"
                    android:text="0" />

                <EditText
                    android:id="@+id/ethsabadoudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/sabado"
                    android:inputType="numberDecimal"
                    android:text="0" />

                <EditText
                    android:id="@+id/ethdomingoudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/domingo"
                    android:inputType="numberDecimal"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lvacaudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dias_vacaciones" />

                <EditText
                    android:id="@+id/etvacaudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/vacaciones"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lsueldocudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sueldo" />

                <EditText
                    android:id="@+id/etsueldocudperfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:hint="@string/sueldo" />
            </LinearLayout>


            <Button
                android:id="@+id/btnperfilactudperfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_redondo_primary"
                android:textColor="@color/Color_texto_titulos"
                android:text="@string/hacer_perfil_activo" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>