<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FragmentUDGastoProyecto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TODO: Update blank fragment layout -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvtitudgasto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/gastos_proyecto" />

                    <TextView
                        android:id="@+id/tvtitproyudgasto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/proyecto"
                        android:textSize="18sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/etdescripcionUDgasto"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:ems="10"
                    android:hint="@string/descripcion_tipo_cliente"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/etimporteUDgasto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/importe"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/etcantidadUDgasto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cantidad"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/etbenefudgasto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/beneficio"
                    android:inputType="numberDecimal" />

                <Button
                    android:id="@+id/btnsaveUDgasto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/btndelUDgasto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/borrar" />

                <Button
                    android:id="@+id/btnnuevoproductoudgasto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar_nuevo_producto" />

                <Button
                    android:id="@+id/btnvolverUDgasto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/volver" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvudgasto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>